[tool.poetry]
name = "gym-pusht"
version = "0.1.5"
description = "A gymnasium environment for PushT."
authors = [
    "Rémi Cadène <re.cadene@gmail.com>",
    "Quentin Gallouédec <quentin.gallouedec@ec-lyon.fr>",
    "Alexander Soare <alexander.soare159@gmail.com>",
    "Simon Alibert <alibert.sim@gmail.com>",
]
readme = "README.md"
license = "Apache-2.0"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]
packages = [{include = "gym_pusht"}]


[tool.poetry.dependencies]
python = "^3.10"
gymnasium = ">=0.29.1"
opencv-python = ">=4.9.0"
pygame = ">=2.5.2"
pymunk = ">=6.6.0"
shapely = ">=2.0.3"
scikit-image = ">=0.22.0"
pre-commit = {version = ">=3.7.0", optional = true}
debugpy = {version = ">=1.8.1", optional = true}
pytest = {version = ">=8.1.0", optional = true}
pytest-cov = {version = ">=5.0.0", optional = true}


[tool.poetry.extras]
dev = ["pre-commit", "debugpy"]
test = ["pytest", "pytest-cov"]


[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    "example.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]
ignore-init-module-imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
